First version of General documentation for Humanoid Path Planner. This documentation references the different packages composing HPP.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,14 +3,8 @@
 # 
 
 SUBDIRS = \
-	src \
-	include \
-	unitTesting
+	doc
 
 hppDocdir = $(libdir)/pkgconfig
 hppDoc_DATA = hppDoc.pc
 
-install-data-hook: documentation
-
-documentation:
-	cd doc; $(MAKE) install
