2007/04/25 	1. add the packages hppTutorialPlanner and kppTutorialPlanner

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,10 @@ PKG_CHECK_MODULES(HPPCMPPLANNER, hppCmpPlanner)
 HPPCMPPLANNER_PREFIX=`$PKG_CONFIG hppCmpPlanner --variable=prefix`
 AC_SUBST(HPPCMPPLANNER_PREFIX)
 
+PKG_CHECK_MODULES(HPPTUTORIALPLANNER, hppTutorialPlanner)
+HPPTUTORIALPLANNER_PREFIX=`$PKG_CONFIG hppTutorialPlanner --variable=prefix`
+AC_SUBST(HPPTUTORIALPLANNER_PREFIX)
+
 PKG_CHECK_MODULES(KPPINTERFACE, kppInterface)
 KPPINTERFACE_PREFIX=`$PKG_CONFIG kppInterface --variable=prefix`
 AC_SUBST(KPPINTERFACE_PREFIX)
@@ -53,6 +57,9 @@ PKG_CHECK_MODULES(KPPINTERFACECMP, kppInterfaceCmp)
 KPPINTERFACECMP_PREFIX=`$PKG_CONFIG kppInterfaceCmp --variable=prefix`
 AC_SUBST(KPPINTERFACECMP_PREFIX)
 
+PKG_CHECK_MODULES(KPPINTERFACETUTORIAL, kppInterfaceTutorial)
+KPPINTERFACETUTORIAL_PREFIX=`$PKG_CONFIG kppInterfaceTutorial --variable=prefix`
+AC_SUBST(KPPINTERFACETUTORIAL_PREFIX)
 
 AC_OUTPUT(
 	hppDoc.pc
