removed "Documentation" in project name. Corrected a faked link.

--- a/doc/package.dox.in
+++ b/doc/package.dox.in
@@ -177,7 +177,7 @@ SEARCHENGINE           = NO
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
-PROJECT_NAME           = "Humanoid Path Planner Documentation"
+PROJECT_NAME           = "Humanoid Path Planner"
 PROJECT_NUMBER         = @VERSION@
 
 #---------------------------------------------------------------------------
