Added links to additional packages.

--- a/configure.ac
+++ b/configure.ac
@@ -53,6 +53,26 @@ PKG_CHECK_MODULES(KPPINTERFACECMP, kppInterfaceCmp)
 KPPINTERFACECMP_PREFIX=`$PKG_CONFIG kppInterfaceCmp --variable=prefix`
 AC_SUBST(KPPINTERFACECMP_PREFIX)
 
+PKG_CHECK_MODULES(HPPGIK, hppGik)
+HPPGIK_PREFIX=`$PKG_CONFIG hppGik --variable=prefix`
+AC_SUBST(HPPGIK_PREFIX)
+
+PKG_CHECK_MODULES(HPPLOA, hppLoa)
+HPPLOA_PREFIX=`$PKG_CONFIG hppLoa --variable=prefix`
+AC_SUBST(HPPLOA_PREFIX)
+
+PKG_CHECK_MODULES(DYNAMICSJRLJAPAN, dynamicsJRLJapan)
+DYNAMICSJRLJAPAN_PREFIX=`$PKG_CONFIG dynamicsJRLJapan --variable=prefix`
+AC_SUBST(DYNAMICSJRLJAPAN_PREFIX)
+
+PKG_CHECK_MODULES(ABSTRACTROBOTDYNAMICS, abstractRobotDynamics)
+ABSTRACTROBOTDYNAMICS_PREFIX=`$PKG_CONFIG abstractRobotDynamics --variable=prefix`
+AC_SUBST(ABSTRACTROBOTDYNAMICS_PREFIX)
+
+PKG_CHECK_MODULES(ABSTRACTGIKTASK, abstractGikTask)
+ABSTRACTGIKTASK_PREFIX=`$PKG_CONFIG abstractGikTask --variable=prefix`
+AC_SUBST(ABSTRACTGIKTASK_PREFIX)
+
 
 AC_OUTPUT(
 	hppDoc.pc
