--- a/doc/additionalDoc/package.h.in
+++ b/doc/additionalDoc/package.h.in
@@ -17,7 +17,9 @@ It can be extended to path planning for other types of robots like digital actor
 The code relative to the HPP is distributed into several software packages listed in the following sections:
 
 \subsection subsec_algo Algorithms
+
 \subsubsection subsubsec_witout_kineo Independent from KineoWorks
+
 \htmlonly
 <ul>
   <li><a href="@ABSTRACTROBOTDYNAMICS_PREFIX@/share/doc/abstractRobotDynamics/main.html">abstractRobotDynamics</a>: abstract interface for robot dynamic model</li>
@@ -26,9 +28,10 @@ The code relative to the HPP is distributed into several software packages liste
   <li><a href="@ABSTRACTGIKTASK_PREFIX@/share/doc/abstractGikTask/main.html">abstractGikTask</a>: Abstract interface for whole body motion planning.</li>
   <li><a href="@HPPGIK_PREFIX@/share/doc/hppGik/main.html">hppGik</a>: Implementation of whole body motion planning.</li>
 </ul>
-
+\endhtmlonly
 
 \subsubsection subsubsec_with_kineo Using KineoWorks
+
 These packages implement path planning algorithms using KineoWorks. They are independent of any interface.
 \htmlonly
 <ul>
