Added reference to package hppOpenHRP. Moved figure at bottom of first page.

--- a/configure.ac
+++ b/configure.ac
@@ -81,6 +81,10 @@ PKG_CHECK_MODULES(KPPINTERFACETUTORIAL, kppInterfaceTutorial)
 KPPINTERFACETUTORIAL_PREFIX=`$PKG_CONFIG kppInterfaceTutorial --variable=prefix`
 AC_SUBST(KPPINTERFACETUTORIAL_PREFIX)
 
+PKG_CHECK_MODULES(HPPOPENHRP, hppOpenHRP)
+HPPOPENHRP_PREFIX=`$PKG_CONFIG hppOpenHRP --variable=prefix`
+AC_SUBST(HPPOPENHRP_PREFIX)
+
 AC_OUTPUT(
 	hppDoc.pc
 	Makefile
