--- a/doc/additionalDoc/package.h.in
+++ b/doc/additionalDoc/package.h.in
@@ -3,16 +3,13 @@
 
 \section sec_intro Introduction
 
-HPP (Humanoid Path Planner) is a suite of software packages
+HPP (Humanoid Path Planner) is a collection of software packages
 implementing path planning functionalities for a humanoid robot.
 HPP KineoWorks (KWS) and KineoPathPlanner-SDK (KPP-SDK). 
 
 It can be extended to path planning for other types of robots like digital actors for instance.
 
 \section sec_organization Organization of the packages
-
-\image html archi.png "Architecture of HPP: the functionalities are distributed into separate software packages. The architecture is composed of Three types of packages: algorithms, CORBA interfaces and KPP-SDK interfaces."
-\image latex archi.pdf "Architecture of HPP: the functionalities are distributed into separate software packages. The architecture is composed of Three types of packages: algorithms, CORBA interfaces and KPP-SDK interfaces."
 
 The code relative to the HPP is distributed into several software packages listed in the following sections:
 
@@ -47,14 +44,18 @@ These packages implement path planning algorithms using KineoWorks. They are ind
 
 \subsection subsec_corba Corba server
 
-These packages implement a Corba server to build objects and send requests to HPP packages.
+The following packages implements a Corba communication functionalities
 \htmlonly
 <ul>
-<li><a href="@HPPCORBASERVER_PREFIX@/share/doc/hppCorbaServer/main.html">hppCorbaServer</a>: Corba server.</li>
+<li><a href="@HPPCORBASERVER_PREFIX@/share/doc/hppCorbaServer/main.html">hppCorbaServer</a>: Corba server to implementing a ChppPlanner object.</li>
+<li><a href="@HPPOPENHRP_PREFIX@/share/doc/hppOpenHRP/main.html">hppOpenHRP</a>: Corba server that implements the model of HRP2.</li>
 </ul>
 \endhtmlonly
 
 \subsection subsec_kppInterface KPP interfaces
+
+These packages implement interfaces with Kineo Path Planner GUI.
+
 \htmlonly
 <ul>
   <li><a href="@KPPINTERFACE_PREFIX@/share/doc/kppInterface/main.html">Abstract KPP interface that manages main notifications.</a></li>
@@ -64,7 +65,8 @@ These packages implement a Corba server to build objects and send requests to HP
   <li><a href="@KPPINTERFACETUTORIAL_PREFIX@/share/doc/kppInterfaceTutorial/main.html">kppInterfaceTutorial: KPP interface to learn how to make and use a KPP interface.</a></li>
 </ul>
 \endhtmlonly
-These packages implement interfaces with Kineo Path Planner GUI.
 
-\
+\image html archi.png "Architecture of HPP: the functionalities are distributed into separate software packages. The architecture is composed of Three types of packages: algorithms, CORBA interfaces and KPP-SDK interfaces."
+\image latex archi.pdf "Architecture of HPP: the functionalities are distributed into separate software packages. The architecture is composed of Three types of packages: algorithms, CORBA interfaces and KPP-SDK interfaces."
+
 */
