Added two pages to explain   1. how to install hpp   2. some development rules applicable in the project. These pages are empty but should be filled-in shortly.

--- a/doc/package.dox.in
+++ b/doc/package.dox.in
@@ -207,7 +207,8 @@ SHOW_DIRECTORIES       = NO
 #---------------------------------------------------------------------------
 FILE_PATTERNS          = *.h *.idl
 EXCLUDE_PATTERNS       = 
-INPUT                  = @builddir@/additionalDoc
+INPUT                  = @builddir@/additionalDoc \
+	@srcdir@/additionalDoc
 
 #---------------------------------------------------------------------------
 # configuration options related to inserting images
