Insert PKG_CHECK_MODULES in a test in order to be able to install the documentation even if all packages are not installed.

--- a/configure.ac
+++ b/configure.ac
@@ -9,81 +9,100 @@ AC_PREREQ(2.59)
 AM_INIT_AUTOMAKE
 AC_PROG_INSTALL
 
-PKG_CHECK_MODULES(KWSPLUS, kwsPlus)
-KWSPLUS_PREFIX=`$PKG_CONFIG kwsPlus --variable=prefix`
-AC_SUBST(KWSPLUS_PREFIX)
+if PKG_CHECK_MODULES(KWSPLUS, kwsPlus); then
+	KWSPLUS_PREFIX=`$PKG_CONFIG kwsPlus --variable=prefix`
+	AC_SUBST(KWSPLUS_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPCORE, hppCore)
-HPPCORE_PREFIX=`$PKG_CONFIG hppCore --variable=prefix`
-AC_SUBST(HPPCORE_PREFIX)
+if PKG_CHECK_MODULES(HPPCORE, hppCore); then
+	HPPCORE_PREFIX=`$PKG_CONFIG hppCore --variable=prefix`
+	AC_SUBST(HPPCORE_PREFIX)
+fi
 
-PKG_CHECK_MODULES(WALKGENJRL, walkGenJrl)
-WALKGENJRL_PREFIX=`$PKG_CONFIG walkGenJrl --variable=prefix`
-AC_SUBST(WALKGENJRL_PREFIX)
+if PKG_CHECK_MODULES(WALKGENJRL, walkGenJrl); then
+	WALKGENJRL_PREFIX=`$PKG_CONFIG walkGenJrl --variable=prefix`
+	AC_SUBST(WALKGENJRL_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPCORBASERVER, hppCorbaServer)
-HPPCORBASERVER_PREFIX=`$PKG_CONFIG hppCorbaServer --variable=prefix`
-AC_SUBST(HPPCORBASERVER_PREFIX)
+if PKG_CHECK_MODULES(HPPCORBASERVER, hppCorbaServer); then
+	HPPCORBASERVER_PREFIX=`$PKG_CONFIG hppCorbaServer --variable=prefix`
+	AC_SUBST(HPPCORBASERVER_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPWALKPLANNER, hppWalkPlanner)
-HPPWALKPLANNER_PREFIX=`$PKG_CONFIG hppWalkPlanner --variable=prefix`
-AC_SUBST(HPPWALKPLANNER_PREFIX)
+if PKG_CHECK_MODULES(HPPWALKPLANNER, hppWalkPlanner); then
+	HPPWALKPLANNER_PREFIX=`$PKG_CONFIG hppWalkPlanner --variable=prefix`
+	AC_SUBST(HPPWALKPLANNER_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPHRPPLANNER, hppHRPPlanner)
-HPPHRPPLANNER_PREFIX=`$PKG_CONFIG hppHRPPlanner --variable=prefix`
-AC_SUBST(HPPHRPPLANNER_PREFIX)
+if PKG_CHECK_MODULES(HPPHRPPLANNER, hppHRPPlanner); then
+	HPPHRPPLANNER_PREFIX=`$PKG_CONFIG hppHRPPlanner --variable=prefix`
+	AC_SUBST(HPPHRPPLANNER_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPCMPPLANNER, hppCmpPlanner)
-HPPCMPPLANNER_PREFIX=`$PKG_CONFIG hppCmpPlanner --variable=prefix`
-AC_SUBST(HPPCMPPLANNER_PREFIX)
+if PKG_CHECK_MODULES(HPPCMPPLANNER, hppCmpPlanner); then
+	HPPCMPPLANNER_PREFIX=`$PKG_CONFIG hppCmpPlanner --variable=prefix`
+	AC_SUBST(HPPCMPPLANNER_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPTUTORIALPLANNER, hppTutorialPlanner)
-HPPTUTORIALPLANNER_PREFIX=`$PKG_CONFIG hppTutorialPlanner --variable=prefix`
-AC_SUBST(HPPTUTORIALPLANNER_PREFIX)
+if PKG_CHECK_MODULES(HPPTUTORIALPLANNER, hppTutorialPlanner); then
+	HPPTUTORIALPLANNER_PREFIX=`$PKG_CONFIG hppTutorialPlanner --variable=prefix`
+	AC_SUBST(HPPTUTORIALPLANNER_PREFIX)
+fi
 
-PKG_CHECK_MODULES(KPPINTERFACE, kppInterface)
-KPPINTERFACE_PREFIX=`$PKG_CONFIG kppInterface --variable=prefix`
-AC_SUBST(KPPINTERFACE_PREFIX)
+if PKG_CHECK_MODULES(KPPINTERFACE, kppInterface); then
+	KPPINTERFACE_PREFIX=`$PKG_CONFIG kppInterface --variable=prefix`
+	AC_SUBST(KPPINTERFACE_PREFIX)
+fi
 
-PKG_CHECK_MODULES(KPPINTERFACEWALK, kppInterfaceWalk)
-KPPINTERFACEWALK_PREFIX=`$PKG_CONFIG kppInterfaceWalk --variable=prefix`
-AC_SUBST(KPPINTERFACEWALK_PREFIX)
+if PKG_CHECK_MODULES(KPPINTERFACEWALK, kppInterfaceWalk); then
+	KPPINTERFACEWALK_PREFIX=`$PKG_CONFIG kppInterfaceWalk --variable=prefix`
+	AC_SUBST(KPPINTERFACEWALK_PREFIX)
+fi
 
-PKG_CHECK_MODULES(KPPINTERFACEHRP, kppInterfaceHRP)
-KPPINTERFACEHRP_PREFIX=`$PKG_CONFIG kppInterfaceHRP --variable=prefix`
-AC_SUBST(KPPINTERFACEHRP_PREFIX)
+if PKG_CHECK_MODULES(KPPINTERFACEHRP, kppInterfaceHRP); then
+	KPPINTERFACEHRP_PREFIX=`$PKG_CONFIG kppInterfaceHRP --variable=prefix`
+	AC_SUBST(KPPINTERFACEHRP_PREFIX)
+fi
 
-PKG_CHECK_MODULES(KPPINTERFACECMP, kppInterfaceCmp)
-KPPINTERFACECMP_PREFIX=`$PKG_CONFIG kppInterfaceCmp --variable=prefix`
-AC_SUBST(KPPINTERFACECMP_PREFIX)
+if PKG_CHECK_MODULES(KPPINTERFACECMP, kppInterfaceCmp); then
+	KPPINTERFACECMP_PREFIX=`$PKG_CONFIG kppInterfaceCmp --variable=prefix`
+	AC_SUBST(KPPINTERFACECMP_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPGIK, hppGik)
-HPPGIK_PREFIX=`$PKG_CONFIG hppGik --variable=prefix`
-AC_SUBST(HPPGIK_PREFIX)
+if PKG_CHECK_MODULES(HPPGIK, hppGik); then
+	HPPGIK_PREFIX=`$PKG_CONFIG hppGik --variable=prefix`
+	AC_SUBST(HPPGIK_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPLOA, hppLoa)
-HPPLOA_PREFIX=`$PKG_CONFIG hppLoa --variable=prefix`
-AC_SUBST(HPPLOA_PREFIX)
+if PKG_CHECK_MODULES(HPPLOA, hppLoa); then
+	HPPLOA_PREFIX=`$PKG_CONFIG hppLoa --variable=prefix`
+	AC_SUBST(HPPLOA_PREFIX)
+fi
 
-PKG_CHECK_MODULES(DYNAMICSJRLJAPAN, dynamicsJRLJapan)
-DYNAMICSJRLJAPAN_PREFIX=`$PKG_CONFIG dynamicsJRLJapan --variable=prefix`
-AC_SUBST(DYNAMICSJRLJAPAN_PREFIX)
+if PKG_CHECK_MODULES(DYNAMICSJRLJAPAN, dynamicsJRLJapan); then
+	DYNAMICSJRLJAPAN_PREFIX=`$PKG_CONFIG dynamicsJRLJapan --variable=prefix`
+	AC_SUBST(DYNAMICSJRLJAPAN_PREFIX)
+fi
 
-PKG_CHECK_MODULES(ABSTRACTROBOTDYNAMICS, abstractRobotDynamics)
-ABSTRACTROBOTDYNAMICS_PREFIX=`$PKG_CONFIG abstractRobotDynamics --variable=prefix`
-AC_SUBST(ABSTRACTROBOTDYNAMICS_PREFIX)
+if PKG_CHECK_MODULES(ABSTRACTROBOTDYNAMICS, abstractRobotDynamics); then
+	ABSTRACTROBOTDYNAMICS_PREFIX=`$PKG_CONFIG abstractRobotDynamics --variable=prefix`
+	AC_SUBST(ABSTRACTROBOTDYNAMICS_PREFIX)
+fi
 
-PKG_CHECK_MODULES(ABSTRACTGIKTASK, abstractGikTask)
-ABSTRACTGIKTASK_PREFIX=`$PKG_CONFIG abstractGikTask --variable=prefix`
-AC_SUBST(ABSTRACTGIKTASK_PREFIX)
+if PKG_CHECK_MODULES(ABSTRACTGIKTASK, abstractGikTask); then
+	ABSTRACTGIKTASK_PREFIX=`$PKG_CONFIG abstractGikTask --variable=prefix`
+	AC_SUBST(ABSTRACTGIKTASK_PREFIX)
+fi
 
-PKG_CHECK_MODULES(KPPINTERFACETUTORIAL, kppInterfaceTutorial)
-KPPINTERFACETUTORIAL_PREFIX=`$PKG_CONFIG kppInterfaceTutorial --variable=prefix`
-AC_SUBST(KPPINTERFACETUTORIAL_PREFIX)
+if PKG_CHECK_MODULES(KPPINTERFACETUTORIAL, kppInterfaceTutorial); then
+	KPPINTERFACETUTORIAL_PREFIX=`$PKG_CONFIG kppInterfaceTutorial --variable=prefix`
+	AC_SUBST(KPPINTERFACETUTORIAL_PREFIX)
+fi
 
-PKG_CHECK_MODULES(HPPOPENHRP, hppOpenHRP)
-HPPOPENHRP_PREFIX=`$PKG_CONFIG hppOpenHRP --variable=prefix`
-AC_SUBST(HPPOPENHRP_PREFIX)
+if PKG_CHECK_MODULES(HPPOPENHRP, hppOpenHRP); then
+	HPPOPENHRP_PREFIX=`$PKG_CONFIG hppOpenHRP --variable=prefix`
+	AC_SUBST(HPPOPENHRP_PREFIX)
+fi
 
 AC_OUTPUT(
 	hppDoc.pc
