Typo in hppModel dependency.

--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ if PKG_CHECK_MODULES(KWSPLUS, kwsPlus); then
 	AC_SUBST(KWSPLUS_PREFIX)
 fi
 
-if PKG_CHECK_MODULES(HPPMODEL, hppCore); then
+if PKG_CHECK_MODULES(HPPMODEL, hppModel); then
 	HPPMODEL_PREFIX=`$PKG_CONFIG hppModel --variable=prefix`
 	AC_SUBST(HPPMODEL_PREFIX)
 fi
